--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 <h1>This is heading 1</h1>
+<p>I'm hosted with GitHub Pages.</p>
 <h2>This is heading 2</h2>
+<p>I'm hosted with GitHub Pages.</p>
 <h3>This is heading 3</h3>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
