--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is heading 1</h1>
+<center><h1>This is heading 1</h1></center>
 <p>I'm hosted with GitHub Pages.</p>
 <h2>This is heading 2</h2>
 <p>I'm hosted with GitHub Pages.</p>
