--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@ You can find my CV <a href="./assets/PDF/Accademic_CVnM.pdf">here</a>.
 	<li><strong>A. Chambolle, L. A. D. Ferrari, B. Merlet.</strong> <em>Variational approximation of size-mass energies for k-dimensional currents.2018</em> <a href="https://doi.org/10.1515/acv-2016-0034">ESAIM: Control, Optimisation and Calculus of Variations (ESAIM: COCV)</a>, 2018.</li> (<a href="https://www.eucass.eu/doi/EUCASS2017-179.pdf">pdf here</a>)
 </ul>
 
+<h2 style="color:rgb(153, 0, 0)">Ph.D. thesis</h2>
+<ul>
+
+<li><em> Phase-field approximations for some branched transport problems.</em>(<a href="./assets/PDF/tesi.pdf">PDF file</a>)
+	</li>
+</ul>
+
 <h2 style="color:rgb(153, 0, 0)">Talks</h2>
 <ul>
 	<li><strong>April 25th, 2018</strong> &#8226 Paris &#8226 <a href="https://indico.math-info-paris.cnrs.fr/event/8/overview">Calculus of Variations at Paris-Diderot</a> &#8226 <em>Variational approximations of size-mass energies for k-dimensional currents.</em></li>(<a href="./assets/PDF/Paris25_6_18.pdf">slides</a>)
